# GerdsenAI_AutoCoder

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  CSE-Icon AutoCoder Holistic Optimization Plan.md  Dockerfile.test  GENERATE_INSTALLER.BAT  GerdsenAI Socrates Holistic Optimization Plan.md  INSTALL.md  INSTALLATION.md  INSTALLATION_README.md  INSTALL_DEPENDENCIES.BAT  LICENSE  MODERNIZATION.md  QUICK_START.md  README.md  SIDEBAR_INTEGRATION.md  START_APPLICATION.BAT  TESTING.md  TODO.md  TYPESCRIPT_UPGRADE_PATTERNS.md  USAGE.md  USER_GUIDE.md  WINDOWS_SETUP.BAT  WINDOWS_SETUP.md  docker-compose.test.yml  eslint.config.js  index.html  install-wrapper.bat  package-lock.json  package.json  playwright.config.ts  setup-fix-symlink.sh  setup-fix.sh  setup-verification-report.json  start-wrapper.bat  styles.css  tsconfig.json  (+2 more)
.github/: dependabot.yml
docs/: CONTEXT_WINDOW_MANAGEMENT.md  DEEP_ANALYSIS_MODE.md  MCP_INTEGRATION.md  MIGRATION.md  README.md  searxng-setup.md  searxng-troubleshooting.md
e2e/: app.spec.ts
mockups/: README.md  context-window-visualizer.html  (+2 more)
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: convert_to_rgba.py  icon.icns
src-tauri/src/: ai_providers.rs  analysis_engine.rs  anthropic_client.rs  chroma_commands.rs  chroma_manager.rs  code_analysis.rs  commands.rs  context_manager.rs  doc_scraper.rs  file_watcher.rs  history_manager.rs  lib.rs  lsp_server.rs  main.rs  mcp_commands.rs  mcp_manager.rs  multi_ai_commands.rs  ollama_client.rs  ollama_provider.rs  openai_client.rs  operation_manager.rs  searxng_client.rs  searxng_commands.rs  thread_pool_manager.rs  user_errors.rs  window_manager.rs
src-tauri/src/tests/: context_manager_tests.rs  mod.rs  operation_manager_tests.rs  searxng_health_tests.rs  searxng_integration_tests.rs  searxng_performance_tests.rs
(+115 files in other folders)
