[package]
name = "gerdsenai-socrates"
version = "1.0.0"
description = "GerdsenAI Socrates - Advanced AI coding assistant"
authors = ["GerdsenAI"]
license = ""
repository = "https://github.com/GerdsenAI/GerdsenAI_AutoCoder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.13", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower-lsp = "0.19"
# chromadb = "0.3" # Temporarily disabled, using in-memory store
futures-util = "0.3"
glob = "0.3"
html-escape = "0.2"
tempfile = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.3"
notify = "5.1"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
regex = "1.8"
url = "2.3"
once_cell = "1.17"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
md5 = "0.7"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
serial_test = "3.0"
testcontainers = "0.15"
wiremock = "0.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
